# financebench-rag

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
scripts/: fetch_data.py  verify_evidence.py
src/: __init__.py  chunk.py  dataset.py  index.py  ingest.py  pages.py  retrieve.py
src/eval/: __init__.py  metrics.py  runner.py
tests/: test_chunk.py  test_dataset.py  test_index.py  test_ingest.py  test_metrics.py  test_pages.py  test_qdrant_health.py  test_retrieve.py  test_runner.py  test_sanity.py
tests/fixtures/: docs_sample.jsonl  questions_sample.jsonl
